# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  env.yml  log_conf.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: autoblack.yml  mypy.yml  pre-commi-main.yml  pre-commit-main.yml  pre-commit-pr.yml  pre-commit.yml  prek-main.yml  prek-pr.yml  pytest-all.yml  pytest.yml  security-updates.yml  test.yml  vulnerability-audit.yml
python_template/: api.py  main.py
template/: api.py  main.py
tests/: conftest.py  test_trivial.py
